--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/main.css">
     <title>Chrome</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="todo"> 
+      <input type="text" placeholder="Add-todos" class="addtodos">
+      <ul class="list">
+      </ul>
+    </div>
+    <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
+    <h1 class="extension">chrome-extension</h1>
     <script src="./js/main.js"></script>
   </body>
 </html>
